compilers/alang/src/alangParser.java
// Generated from alang.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class alangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BUD=1, FUNKCIA=2, HOTOVO=3, VYPLUJ=4, MAKAJ=5, JAKAM=6, IF=7, ELSE=8, 
		FI=9, CITAJCISLO=10, CITAJRIADOK=11, VYPIS=12, VYPISRIADOK=13, CISLO=14, 
		ZNAKY=15, BOOL=16, VOID=17, EQ=18, LT=19, GT=20, LEQ=21, GEQ=22, NEQ=23, 
		NOT=24, AND=25, OR=26, ADD=27, SUB=28, DIV=29, MUL=30, ASSIGN=31, TRUE=32, 
		FALSE=33, INT=34, STRING=35, NEWLINE=36, LPAR=37, RPAR=38, LSQUARE=39, 
		RSQUARE=40, COMMA=41, ID=42, LINE_COMMENT=43, WHITESPACE=44;
	public static final int
		RULE_init = 0, RULE_statements = 1, RULE_statement = 2, RULE_block = 3, 
		RULE_function = 4, RULE_vypluj = 5, RULE_var_declaration = 6, RULE_assignment = 7, 
		RULE_if_block = 8, RULE_loop_block = 9, RULE_func_call = 10, RULE_input_int = 11, 
		RULE_input_row = 12, RULE_output_var = 13, RULE_output_row = 14, RULE_index_to_array = 15, 
		RULE_var_type = 16, RULE_return_type = 17, RULE_condition = 18, RULE_expression = 19, 
		RULE_argtype = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"init", "statements", "statement", "block", "function", "vypluj", "var_declaration", 
			"assignment", "if_block", "loop_block", "func_call", "input_int", "input_row", 
			"output_var", "output_row", "index_to_array", "var_type", "return_type", 
			"condition", "expression", "argtype"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'BUD'", "'FUNKCIA'", "'HOTOVO'", "'VYPLUJ'", "'MAKAJ'", "'JAKAM'", 
			"'IF'", "'ELSE'", "'FI'", "'CITAJCISLO'", "'CITAJRIADOK'", "'VYPIS'", 
			"'VYPISRIADOK'", "'CISLO'", "'ZNAKY'", "'BOOL'", "'VOID'", "'=='", "'<'", 
			"'>'", "'<='", "'>='", "'!='", "'NOT'", "'AND'", "'OR'", "'+'", "'-'", 
			"'/'", "'*'", "'='", "'TRUE'", "'FALSE'", null, null, null, "'('", "')'", 
			"'['", "']'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BUD", "FUNKCIA", "HOTOVO", "VYPLUJ", "MAKAJ", "JAKAM", "IF", "ELSE", 
			"FI", "CITAJCISLO", "CITAJRIADOK", "VYPIS", "VYPISRIADOK", "CISLO", "ZNAKY", 
			"BOOL", "VOID", "EQ", "LT", "GT", "LEQ", "GEQ", "NEQ", "NOT", "AND", 
			"OR", "ADD", "SUB", "DIV", "MUL", "ASSIGN", "TRUE", "FALSE", "INT", "STRING", 
			"NEWLINE", "LPAR", "RPAR", "LSQUARE", "RSQUARE", "COMMA", "ID", "LINE_COMMENT", 
			"WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "alang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public alangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class InitContext extends ParserRuleContext {
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof alangVisitor ) return ((alangVisitor<? extends T>)visitor).visitInit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_init);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			statements();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(alangParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(alangParser.NEWLINE, i);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof alangVisitor ) return ((alangVisitor<? extends T>)visitor).visitStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statements);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(44);
				match(NEWLINE);
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(50);
			statement();
			setState(59);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(52); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(51);
						match(NEWLINE);
						}
						}
						setState(54); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==NEWLINE );
					setState(56);
					statement();
					}
					} 
				}
				setState(61);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(62);
				match(NEWLINE);
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public Var_declarationContext var_declaration() {
			return getRuleContext(Var_declarationContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof alangVisitor ) return ((alangVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(71);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUNKCIA:
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				function();
				}
				break;
			case BUD:
				enterOuterAlt(_localctx, 2);
				{
				setState(69);
				var_declaration();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 3);
				{
				setState(70);
				assignment();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	 
		public BlockContext() { }
		public void copyFrom(BlockContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BlockVarDecContext extends BlockContext {
		public Var_declarationContext var_declaration() {
			return getRuleContext(Var_declarationContext.class,0);
		}
		public BlockVarDecContext(BlockContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof alangVisitor ) return ((alangVisitor<? extends T>)visitor).visitBlockVarDec(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BlockInputRowContext extends BlockContext {
		public Input_rowContext input_row() {
			return getRuleContext(Input_rowContext.class,0);
		}
		public BlockInputRowContext(BlockContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof alangVisitor ) return ((alangVisitor<? extends T>)visitor).visitBlockInputRow(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BlockOutputRowContext extends BlockContext {
		public Output_rowContext output_row() {
			return getRuleContext(Output_rowContext.class,0);
		}
		public BlockOutputRowContext(BlockContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof alangVisitor ) return ((alangVisitor<? extends T>)visitor).visitBlockOutputRow(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BlockOutputVarContext extends BlockContext {
		public Output_varContext output_var() {
			return getRuleContext(Output_varContext.class,0);
		}
		public BlockOutputVarContext(BlockContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof alangVisitor ) return ((alangVisitor<? extends T>)visitor).visitBlockOutputVar(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BlockFuncCallContext extends BlockContext {
		public Func_callContext func_call() {
			return getRuleContext(Func_callContext.class,0);
		}
		public BlockFuncCallContext(BlockContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof alangVisitor ) return ((alangVisitor<? extends T>)visitor).visitBlockFuncCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BlockIfContext extends BlockContext {
		public If_blockContext if_block() {
			return getRuleContext(If_blockContext.class,0);
		}
		public BlockIfContext(BlockContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof alangVisitor ) return ((alangVisitor<? extends T>)visitor).visitBlockIf(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BlockAsgnContext extends BlockContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public BlockAsgnContext(BlockContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof alangVisitor ) return ((alangVisitor<? extends T>)visitor).visitBlockAsgn(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BlockReturnContext extends BlockContext {
		public VyplujContext vypluj() {
			return getRuleContext(VyplujContext.class,0);
		}
		public BlockReturnContext(BlockContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof alangVisitor ) return ((alangVisitor<? extends T>)visitor).visitBlockReturn(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BlockLoopContext extends BlockContext {
		public Loop_blockContext loop_block() {
			return getRuleContext(Loop_blockContext.class,0);
		}
		public BlockLoopContext(BlockContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof alangVisitor ) return ((alangVisitor<? extends T>)visitor).visitBlockLoop(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BlockInputIntContext extends BlockContext {
		public Input_intContext input_int() {
			return getRuleContext(Input_intContext.class,0);
		}
		public BlockInputIntContext(BlockContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof alangVisitor ) return ((alangVisitor<? extends T>)visitor).visitBlockInputInt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_block);
		try {
			setState(83);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new BlockVarDecContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				var_declaration();
				}
				break;
			case 2:
				_localctx = new BlockAsgnContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				assignment();
				}
				break;
			case 3:
				_localctx = new BlockIfContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(75);
				if_block();
				}
				break;
			case 4:
				_localctx = new BlockLoopContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(76);
				loop_block();
				}
				break;
			case 5:
				_localctx = new BlockFuncCallContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(77);
				func_call();
				}
				break;
			case 6:
				_localctx = new BlockInputIntContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(78);
				input_int();
				}
				break;
			case 7:
				_localctx = new BlockInputRowContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(79);
				input_row();
				}
				break;
			case 8:
				_localctx = new BlockOutputVarContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(80);
				output_var();
				}
				break;
			case 9:
				_localctx = new BlockOutputRowContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(81);
				output_row();
				}
				break;
			case 10:
				_localctx = new BlockReturnContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(82);
				vypluj();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public TerminalNode FUNKCIA() { return getToken(alangParser.FUNKCIA, 0); }
		public Return_typeContext return_type() {
			return getRuleContext(Return_typeContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(alangParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(alangParser.ID, i);
		}
		public TerminalNode LPAR() { return getToken(alangParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(alangParser.RPAR, 0); }
		public TerminalNode HOTOVO() { return getToken(alangParser.HOTOVO, 0); }
		public List<ArgtypeContext> argtype() {
			return getRuleContexts(ArgtypeContext.class);
		}
		public ArgtypeContext argtype(int i) {
			return getRuleContext(ArgtypeContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(alangParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(alangParser.NEWLINE, i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(alangParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(alangParser.COMMA, i);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof alangVisitor ) return ((alangVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(FUNKCIA);
			setState(86);
			return_type();
			setState(87);
			match(ID);
			setState(88);
			match(LPAR);
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CISLO) | (1L << ZNAKY) | (1L << BOOL))) != 0)) {
				{
				setState(89);
				argtype();
				setState(90);
				match(ID);
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(91);
					match(COMMA);
					setState(92);
					argtype();
					setState(93);
					match(ID);
					}
					}
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(102);
			match(RPAR);
			setState(104); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(103);
				match(NEWLINE);
				}
				}
				setState(106); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BUD) | (1L << VYPLUJ) | (1L << MAKAJ) | (1L << IF) | (1L << CITAJCISLO) | (1L << CITAJRIADOK) | (1L << VYPIS) | (1L << VYPISRIADOK) | (1L << ID))) != 0)) {
				{
				{
				setState(108);
				block();
				setState(110); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(109);
					match(NEWLINE);
					}
					}
					setState(112); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NEWLINE );
				}
				}
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(119);
			match(HOTOVO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VyplujContext extends ParserRuleContext {
		public TerminalNode VYPLUJ() { return getToken(alangParser.VYPLUJ, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VyplujContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vypluj; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof alangVisitor ) return ((alangVisitor<? extends T>)visitor).visitVypluj(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VyplujContext vypluj() throws RecognitionException {
		VyplujContext _localctx = new VyplujContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_vypluj);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(VYPLUJ);
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ADD) | (1L << SUB) | (1L << TRUE) | (1L << FALSE) | (1L << INT) | (1L << STRING) | (1L << LPAR) | (1L << ID))) != 0)) {
				{
				setState(122);
				expression(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_declarationContext extends ParserRuleContext {
		public TerminalNode BUD() { return getToken(alangParser.BUD, 0); }
		public Var_typeContext var_type() {
			return getRuleContext(Var_typeContext.class,0);
		}
		public TerminalNode ID() { return getToken(alangParser.ID, 0); }
		public List<Index_to_arrayContext> index_to_array() {
			return getRuleContexts(Index_to_arrayContext.class);
		}
		public Index_to_arrayContext index_to_array(int i) {
			return getRuleContext(Index_to_arrayContext.class,i);
		}
		public Var_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_declaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof alangVisitor ) return ((alangVisitor<? extends T>)visitor).visitVar_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_declarationContext var_declaration() throws RecognitionException {
		Var_declarationContext _localctx = new Var_declarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_var_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(BUD);
			setState(126);
			var_type();
			setState(127);
			match(ID);
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LSQUARE) {
				{
				{
				setState(128);
				index_to_array();
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(alangParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(alangParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<Index_to_arrayContext> index_to_array() {
			return getRuleContexts(Index_to_arrayContext.class);
		}
		public Index_to_arrayContext index_to_array(int i) {
			return getRuleContext(Index_to_arrayContext.class,i);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof alangVisitor ) return ((alangVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_assignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(ID);
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LSQUARE) {
				{
				{
				setState(135);
				index_to_array();
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(141);
			match(ASSIGN);
			setState(142);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_blockContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(alangParser.IF, 0); }
		public TerminalNode LPAR() { return getToken(alangParser.LPAR, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(alangParser.RPAR, 0); }
		public TerminalNode FI() { return getToken(alangParser.FI, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(alangParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(alangParser.NEWLINE, i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(alangParser.ELSE, 0); }
		public If_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof alangVisitor ) return ((alangVisitor<? extends T>)visitor).visitIf_block(this);
			else return visitor.visitChildren(this);
		}
	}
